app/1-activemq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
  labels:
    app: activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activemq
  template:
    metadata:
      labels:
        app: activemq
    spec:
      containers:
        - image: docker.io/vromero/activemq-artemis:latest-alpine
          name: activemq-artemis
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
          ports:
            - name: activemq
              containerPort: 61616
---
apiVersion: v1
kind: Service
metadata:
  name: activemq
  labels:
    app: activemq
spec:
  selector:
    app: activemq
  ports:
    - port: 61616
      protocol: TCP
      targetPort: activemq
