app/2-berza-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berza-service
  labels:
    app: berza-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: berza-service
  template:
    metadata:
      labels:
        app: berza-service
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-berza:latest
          name: banka-berza-service
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "500m"
              memory: 700Mi
          ports:
            - name: berza-service
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: berza-service
  labels:
    app: berza-service
spec:
  selector:
    app: berza-service
  ports:
    - port: 8082
      protocol: TCP
      targetPort: berza-service
