app/2-influx-scrapper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influx-scrapper
  labels:
    app: influx-scrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influx-scrapper
  template:
    metadata:
      labels:
        app: influx-scrapper
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-influx-scrapper:latest
          name: banka-influx-scrapper
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: influx-scrapper
  labels:
    app: influx-scrapper
spec:
  selector:
    app: influx-scrapper
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
