app/2-mail-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
  labels:
    app: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-mail-service:latest
          name: banka-mail-service
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "500m"
              memory: 512Mi
          ports:
            - name: mail-service
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
  labels:
    app: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - port: 8081
      protocol: TCP
      targetPort: mail-service
