app/2-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-user-service:latest
          name: banka-user-service
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: 700m
              memory: 700Mi
          ports:
            - name: user-service
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 8080
      protocol: TCP
      targetPort: user-service
