app/3-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-front:latest
          name: banka-frontend
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
          args:
            - |-
              cp .env.test .env
              npm start
          resources: 
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - name: frontend
              containerPort: 3000
      securityContext:
        runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: frontend
