app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: banka-test
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-front:latest
          name: banka-frontend
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
          args:
            - |-
              find /usr/app/src \( -type d -name .git -prune \) -o -type f -print0 | xargs -0 sed -i 's/http:\/\/localhost:8080/https:\/\/test\.banka\.xmudrii\.com\/user/g'
              find /usr/app/src \( -type d -name .git -prune \) -o -type f -print0 | xargs -0 sed -i 's/http:\/\/localhost:8082/https:\/\/test\.banka\.xmudrii\.com\/berza/g'
              find /usr/app/src \( -type d -name .git -prune \) -o -type f -print0 | xargs -0 sed -i 's/http:\/\/localhost:8083/https:\/\/test\.banka\.xmudrii\.com\/racun/g'
              npm start
          resources: 
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - name: frontend
              containerPort: 3000
      securityContext:
        runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: banka-test
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: frontend
