app/racun-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: racun-service
  namespace: NAMESPACE
  labels:
    app: racun-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: racun-service
  template:
    metadata:
      labels:
        app: racun-service
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-racun-service:latest
          name: banka-racun-service
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - name: racun-service
              containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: racun-service
  namespace: NAMESPACE
  labels:
    app: racun-service
spec:
  selector:
    app: racun-service
  ports:
    - port: 8083
      protocol: TCP
      targetPort: racun-service
