app/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: NAMESPACE
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/banka-user-service:latest
          name: banka-user-service
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - name: user-service
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: NAMESPACE
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 8080
      protocol: TCP
      targetPort: user-service
