app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-ingress-frontend
  namespace: banka-test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.banka.xmudrii.com
      secretName: xmudrii-com-certs
  rules:
  - host: "test.banka.xmudrii.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-ingress-api
  namespace: banka-test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.banka.xmudrii.com
      secretName: xmudrii-com-certs
  rules:
  - host: "test.banka.xmudrii.com"
    http:
      paths:
        - pathType: Prefix
          path: "/user(/|$)(.*)"
          backend:
            service:
              name: user-service
              port:
                number: 8080
        - pathType: Prefix
          path: "/berza(/|$)(.*)"
          backend:
            service:
              name: berza-service
              port:
                number: 8082
        - pathType: Prefix
          path: "/racun(/|$)(.*)"
          backend:
            service:
              name: racun-service
              port:
                number: 8083
